# breedgym

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  example.run.sh  main.py  pyproject.toml  setup.py
.github/workflows/: build.yml  pre-commit.yml
Data/: PyGeno.txt.REMOVED.git-id
Scripts/: 00_Environment.py  01_selection_BRUTE.py  02_simulate_crosses.py  LoadData.py  Runs.sh  my_GEBV.py  my_besttenGEBV.py  my_cross.py  my_getGEBV.py  my_stackChromosmes.py  quick.py
breedgym/: __init__.py  breedgym.py  wrappers.py
breedgym/data/: sample_full_pop_geno.npy  sample_genetic_map.txt  sample_geno.npy  sample_with_r_genetic_map.txt  small_const_chr_genetic_map.txt  small_genetic_map.txt
breedgym/utils/: index_functions.py  paths.py  plot_utils.py
breedgym/vector/: __init__.py  breeding_programs_env.py  vec_env.py  vec_wrappers.py
breeding_gym/: Plot.offspring.R  __init__.py  baseline_agent.py  breeding_gym.py  load_data.py  main.py  my_GEBV.py  my_besttenGEBV.py  my_cross.py  my_getGEBV.py  my_getMarkerEffects.py  my_index.py  my_stackChromosomes.py  paths.py  plot_utils.py  plotdata.R  selection_BRUTE.py  simulate_crosses.py  wrappers.py
breeding_gym/data/: geno.txt.REMOVED.git-id  medium_geno.npy.REMOVED.git-id
breeding_gym/simulator/: __init__.py  (+2 more)
scripts/: baseline.py  box_plots.py  compare_indexes.py  fixed_policy_example.py  optimize_diff_cross.py  profile_cross.py  profile_env.py  simplified_rl_action.py  time_cross.py  time_vec.py  time_wheat.py
tests/: test_cross  test_cross.py  test_env.py  test_main.py  test_simulator.py  test_vec.py  test_wrappers.py
(+10 files in other folders)
